--- a/settings.yml
+++ b/settings.yml
@@ -1,6 +1,6 @@
 Menu_items:
   type: list
-  default: "Products|Promotions|Sales|Questions"
+  default: "Design, magic, Get inspired!, vdm|Code, keyboard-o, Learn new things!, vdm|Business, money, Start a new career!, vdm|Shop, shopping-cart, Buy cool stuff!, vdo|More, none, Even more cool things!, vdo"
   description:
     en: 'Add menu items. One item per line in this order: Text, icon, title, view.<br><b>Text:</b> what appears on the menu.<br><b>Icon:</b> the icon displayed next to the item. If you do not want to use an icon, use `none`<br><b>Title:</b> the text that appears when the item is hovered.<br><b>View:</b> Choose what devices the item appears on. `vdm` appears on both desktop and mobile, `vdo` appears on desktops only, `vmo` appears on mobiles only. Due to lack of space, it is reccomended to not add more than 3-4 items on mobile.'
 Submenu_items:
